<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Click Empire</string>
    <string name="upgrade_1_name">Wooden Pickaxe</string>
    <string name="upgrade_1_description">Generates +1 coin/sec</string>
    <string name="upgrade_2_name">Stone Pickaxe</string>
    <string name="upgrade_2_description">Generates +2 coins/sec</string>
    <string name="upgrade_3_name">Iron Pickaxe</string>
    <string name="upgrade_3_description">Generates +5 coins/sec</string>
    <string name="upgrade_4_name">Golden Pickaxe</string>
    <string name="upgrade_4_description">Generates +10 coins/sec</string>
    <string name="upgrade_5_name">Diamond Pickaxe</string>
    <string name="upgrade_5_description">Generates +20 coins/sec</string>
    <string name="upgrade_6_name">Worker</string>
    <string name="upgrade_6_description">Generates +40 coins/sec</string>
    <string name="upgrade_7_name">Mine</string>
    <string name="upgrade_7_description">Generates +75 coins/sec</string>
    <string name="upgrade_8_name">Factory</string>
    <string name="upgrade_8_description">Generates +150 coins/sec</string>
    <string name="upgrade_9_name">Bank</string>
    <string name="upgrade_9_description">Generates +300 coins/sec</string>
    <string name="upgrade_10_name">Investment Fund</string>
    <string name="upgrade_10_description">Generates +600 coins/sec</string>
    <string name="upgrade_11_name">Startup</string>
    <string name="upgrade_11_description">Generates +1,000 coins/sec</string>
    <string name="upgrade_12_name">Corporation</string>
    <string name="upgrade_12_description">Generates +2,000 coins/sec</string>
    <string name="upgrade_13_name">Skyscraper</string>
    <string name="upgrade_13_description">Generates +4,000 coins/sec</string>
    <string name="upgrade_14_name">Mega Factory</string>
    <string name="upgrade_14_description">Generates +8,000 coins/sec</string>
    <string name="upgrade_15_name">Space Station</string>
    <string name="upgrade_15_description">Generates +15,000 coins/sec</string>
    <string name="upgrade_16_name">Moon Base</string>
    <string name="upgrade_16_description">Generates +30,000 coins/sec</string>
    <string name="upgrade_17_name">Mars Colony</string>
    <string name="upgrade_17_description">Generates +60,000 coins/sec</string>
    <string name="upgrade_18_name">Galaxy Company</string>
    <string name="upgrade_18_description">Generates +120,000 coins/sec</string>
    <string name="upgrade_19_name">Universal Empire</string>
    <string name="upgrade_19_description">Generates +250,000 coins/sec</string>
    <string name="upgrade_20_name">Infinite Generator</string>
    <string name="upgrade_20_description">Generates +500,000 coins/sec</string>
    <string name="achievement_1_title">First Click</string>
    <string name="achievement_1_description">Make your first click.</string>
    <string name="achievement_2_title">Beginner</string>
    <string name="achievement_2_description">Make 100 clicks.</string>
    <string name="achievement_3_title">Click Master</string>
    <string name="achievement_3_description">Make 1,000 clicks.</string>
    <string name="achievement_4_title">First Investment</string>
    <string name="achievement_4_description">Buy your first upgrade.</string>
    <string name="achievement_5_title">Businessman</string>
    <string name="achievement_5_description">Buy 10 upgrades.</string>
    <string name="achievement_6_title">Tycoon</string>
    <string name="achievement_6_description">Buy 50 upgrades.</string>
    <string name="achievement_7_title">Rich</string>
    <string name="achievement_7_description">Collect 1,000 coins.</string>
    <string name="achievement_8_title">Wealthy</string>
    <string name="achievement_8_description">Collect 10,000 coins.</string>
    <string name="achievement_9_title">Millionaire</string>
    <string name="achievement_9_description">Collect 100,000 coins.</string>
    <string name="achievement_10_title">Small Factory</string>
    <string name="achievement_10_description">Reach 10 coins per second.</string>
    <string name="achievement_11_title">Industrialist</string>
    <string name="achievement_11_description">Reach 100 coins per second.</string>
    <string name="achievement_12_title">Level Up</string>
    <string name="achievement_12_description">Reach level 5.</string>
    <string name="achievement_13_title">Empire Builder</string>
    <string name="achievement_13_description">Reach level 10.</string>
    <string name="achievement_14_title">One Hour</string>
    <string name="achievement_14_description">Play for one hour.</string>
    <string name="achievement_15_title">Coin Emperor</string>
    <string name="achievement_15_description">Earn 1,000,000 coins.</string>
    <string name="shop">Shop</string>
    <string name="level">Level: </string>
    <string name="statistics">Statistics</string>
    <string name="settings">Settings</string>
    <string name="default_balance">Coins: %1$d</string>
    <string name="default_income">Income: %1$d/s</string>
    <string name="default_click_power">Click Power: %1$d</string>
    <string name="default_level">Level: %1$d</string>
    <string name="home">Home</string>
    <string name="upgrade_icon">Upgrade icon</string>
    <string name="default_upgrade_name">Upgrade</string>
    <string name="default_upgrade_description">Upgrade description</string>
    <string name="default_upgrade_level">Level: %1$d</string>
    <string name="default_upgrade_income">Income: %1$d/s</string>
    <string name="buy">Buy</string>
    <string name="default_upgrade_price">Price: %1$d</string>
    <string name="purchase_success">Upgrade purchased</string>
    <string name="not_enough_coins">Not enough coins</string>
    <string name="achievement_unlocked">🏆 Achievement unlocked!</string>
    <string name="achievements">Achievements</string>
    <string name="achievement_icon">Achievement icon</string>
    <string name="unlocked">Unlocked</string>
    <string name="locked">Locked</string>
    <string name="achievement_hidden">\?\?\?</string>
    <string name="play_time">Play Time</string>
    <string name="clicks">Clicks</string>
    <string name="purchases">Purchases</string>
    <string name="earned_coins">Earned Coins</string>
    <string name="highest_balance">Highest Balance</string>
    <string name="income_per_second">Income / sec</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="offline_time">Offline time</string>
    <string name="earned">Earned</string>
    <string name="coins">" coins"</string>
    <string name="sound">Sound</string>
    <string name="vibration">Vibration</string>
    <string name="reset_progress">Reset Progress</string>
    <string name="reset_progress_title">Reset Progress</string>
    <string name="reset_progress_message">Are you sure you want to delete all game progress?</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="version">Version</string>
    <string name="version_format">Version %1$s</string>
    <string name="balance_format">Coins: %1$s</string>
    <string name="income_format">Income: %1$s/sec</string>
    <string name="click_power_format">Click Power: %1$s</string>
    <string name="level_format">Level: %1$d</string>
    <string name="upgrade_purchased">Purchased: %1$s</string>
    <string name="offline_income_message">
        Offline time:
        %1$s

        Earned:
        %2$s coins
    </string>
    <string name="achievement_unlocked_message">
        Achievement unlocked!

        %1$s
    </string>

    <string name="game_completed_title">
        Congratulations!
    </string>

    <string name="game_completed_message">
        You have completed Click Empire!\n\nYou reached the maximum player level and mastered the game.\n\nThank you for playing!\nYou can continue playing to improve your statistics and earn more coins.
    </string>

    <string name="continue_playing">
        Continue Playing
    </string>
</resources>