<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".view.activity.ShopActivity">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:title="@string/shop"
        android:background="@color/surface"
        android:elevation="@dimen/spacing_xs"
        app:navigationIconTint="@color/text_primary"
        app:titleTextColor="@color/text_primary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardPlayerInfo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_md"
        app:cardBackgroundColor="@color/surface"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.ClickEmpire.Card"
        app:cardElevation="@dimen/elevation_2"
        android:clickable="true"
        android:focusable="true"
        app:rippleColor="@color/primary_pressed"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/spacing_md">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textBalance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_balance"
                android:textAppearance="@style/TextAppearance.ClickEmpire.Title"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textIncome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_income"
                android:textAppearance="@style/TextAppearance.ClickEmpire.Body"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewUpgrades"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:padding="@dimen/spacing_md"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/spacing_md"
        android:scrollbars="vertical"
        tools:listitem="@layout/item_upgrade"
        app:layout_constraintTop_toBottomOf="@id/cardPlayerInfo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>